--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,9 +26,8 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7.6'
-          bundler: '2.4.10'
-          bundler-cache: false
-          cache-version: 3
+          bundler: '2.3.26'   # last stable for Ruby 2.7
+          bundler-cache: true
 
       - name: Setup Pages
         id: pages
