--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build Jekyll 2.x
         run: |
           cd .submodules/wiremock.org-2.x
+          bundle install
           bundle exec jekyll build --config '../../_config.yml,../../_config-2.x.yml' --baseurl "${{ steps.pages.outputs.base_path }}/2.x"
         env:
           JEKYLL_ENV: development
