--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           cd .submodules/wiremock.org-2.x
           bundle install
-          bundle exec jekyll build --config '../../_config.yml,../../_config-2.x.yml' --baseurl "${{ steps.pages.outputs.base_path }}"
+          bundle exec jekyll build --config '../../_config.yml,../../_config-2.x.yml' 
         env:
           JEKYLL_ENV: production
 
